# cpp-lecture-exercises

./: .gitignore
exercise1/framework/montecarlopi/: CMakeLists.txt  montecarlopi.cpp  montecarlopi.h  montecarlopi.txt  tests.cc
exercise1/framework/palindrome-checker/: .gitignore  CMakeLists.txt  README.md  palindrome-checker.cpp  palindrome-checker.h  palindromes_small.txt  tests.cc
exercise1/framework/syntactic_sugar/: CMakeLists.txt  syntax.cpp
exercise2/: .gitignore
exercise2/graph/: CMakeLists.txt  Graph.cpp  Graph.h  GraphFactory.cpp  GraphFactory.h  InstanceCounter.cpp  InstanceCounter.h  graph-test.cpp  graph_make_macos.sh
exercise2/particles/: engine.cpp  engine.h  main.cpp  particle.cpp  particle.h  particles.pro  widget.cpp  widget.h
exercise2/regex-filter/: CMakeLists.txt  emails.txt  regex-filter.cpp
exercise2/runner/: build.sh  errors.txt  externallibrary-x64.lib  externallibrary-x86.lib  externallibrary.dylib  externallibrary.h  runner.cpp
exercise3/: CMakeLists.txt
exercise3/integration/: address-generator.py  addresses.txt  integration.cpp
exercise3/modcounter/: modulo_counter.h  test.cpp
exercise3/tea/: tea_filebuf-test.cpp  tea_filebuf.cpp  tea_filebuf.h
exercise3/token_iterator/: text.txt  token_iterator.cpp
exercise4/beziercurve/: CubicBezierCurve.h  test.cpp
exercise4/dice/: framework.h  mud-main.cpp  seven-main.cpp
exercise4/graph/: Graph.h  main.cpp
exercise4/transactions/: Transaction.cpp  Transaction.h  main.cpp
exercise5/: CMakeLists.txt
exercise5/collect/: collect.h  main.cpp
exercise5/signal/: Signal.h  main.cpp
exercise5/variant/: Variant.h  main.cpp
exercise6/: .gitignore
exercise6/cmake-project/: CMakeLists.txt  jarvis_algorithm.h  jarvis_algorithm_test.cpp  line_segment_intersection.h  line_segment_intersection_test.cpp
exercise6/cmake-project/algorithms/: jarvis_algorithm.cpp  jarvis_algorithm.h  line_segment_intersection.cpp  line_segment_intersection.h
exercise6/cmake-project/geometries/: geometries.h
exercise6/cmake-project/tests/: jarvis_algorithm_test.cpp  line_segment_intersection_test.cpp
exercise6/native-module-nodejs/: CMakeLists.txt  Findnodejs.cmake  main.js
exercise6/native-module-python/: build_n_run.sh  main.py  process.c  process.cpp  process.h
exercise6/script-embedding-duktape/: CMakeLists.txt  main.cpp  process.js
exercise6/script-embedding-python/: CMakeLists.txt  main.cpp  process.py
exercise6/web-library/: ..cbp  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  index.html  process.cpp  process.js  start_server.sh
