cmake_minimum_required(VERSION 3.6)
project(sedp_exercise6)

set(CMAKE_CXX_STANDARD 20)

#set(DEFAULT_PROJECT_OPTIONS "")

add_executable(script-embedding-python
    main.cpp
)

#target_include_directories(script-embedding-python
#    PRIVATE
#)

#set_target_properties(script-embedding-python
#    PROPERTIES
#    ${DEFAULT_PROJECT_OPTIONS}
#)

#target_link_libraries(script-embedding-python
#    PUBLIC
#)
